--- a/test/hardware/config/link_config_u280_tri.ini
+++ b/test/hardware/config/link_config_u280_tri.ini
@@ -25,25 +25,17 @@ nk=reduce_sum_float:3:arith_fp_0.arith_fp_1.arith_fp_2
 nk=reduce_sum_double:3:arith_dp_0.arith_dp_1.arith_dp_2
 nk=reduce_sum_int32_t:3:arith_i32_0.arith_i32_1.arith_i32_2
 nk=reduce_sum_int64_t:3:arith_i64_0.arith_i64_1.arith_i64_2
-nk=fp_hp_stream_conv:9:downcast_0_0.downcast_0_1.downcast_0_2.downcast_1_0.downcast_1_1.downcast_1_2.downcast_2_0.downcast_2_1.downcast_2_2
-nk=hp_fp_stream_conv:9:upcast_0_0.upcast_0_1.upcast_0_2.upcast_1_0.upcast_1_1.upcast_1_2.upcast_2_0.upcast_2_1.upcast_2_2
+nk=hp_compression:9:compression_0_0.compression_0_1.compression_0_2.compression_1_0.compression_1_1.compression_1_2.compression_2_0.compression_2_1.compression_2_2
 nk=loopback:3:lb_user_krnl_0.lb_user_krnl_1.lb_user_krnl_2
 
 # Kernels Foorplaning
 slr=ccl_offload_0:SLR0
 slr=hostctrl_0:SLR0
 slr=network_krnl_0:SLR0
-slr=downcast_0_0:SLR0
-slr=downcast_0_1:SLR0
-slr=downcast_0_2:SLR0
-slr=upcast_0_0:SLR0
-slr=upcast_0_1:SLR0
-slr=upcast_0_2:SLR0
-slr=arith_hp_0:SLR0
-slr=arith_fp_0:SLR0
-slr=arith_dp_0:SLR0
-slr=arith_i32_0:SLR0
-slr=arith_i64_0:SLR0
+slr=compression_0_0:SLR0
+slr=compression_0_1:SLR0
+slr=compression_0_2:SLR0
+slr=arith_0:SLR0
 slr=lb_user_krnl_0:SLR0
 
 sp=ccl_offload_0.m_axi_0:HBM[0:5]
@@ -53,17 +45,10 @@ sp=ccl_offload_0.m_axi_1:HBM[0:5]
 slr=ccl_offload_1:SLR1
 slr=hostctrl_1:SLR1
 slr=network_krnl_1:SLR1
-slr=downcast_1_0:SLR1
-slr=downcast_1_1:SLR1
-slr=downcast_1_2:SLR1
-slr=upcast_1_0:SLR1
-slr=upcast_1_1:SLR1
-slr=upcast_1_2:SLR1
-slr=arith_hp_1:SLR1
-slr=arith_fp_1:SLR1
-slr=arith_dp_1:SLR1
-slr=arith_i32_1:SLR1
-slr=arith_i64_1:SLR1
+slr=compression_1_0:SLR1
+slr=compression_1_1:SLR1
+slr=compression_1_2:SLR1
+slr=arith_1:SLR1
 slr=lb_user_krnl_1:SLR1
 
 sp=ccl_offload_1.m_axi_0:HBM[6:11]
@@ -73,66 +58,59 @@ sp=ccl_offload_1.m_axi_1:HBM[6:11]
 slr=ccl_offload_2:SLR2
 slr=hostctrl_2:SLR2
 slr=network_krnl_2:SLR2
-slr=downcast_2_0:SLR2
-slr=downcast_2_1:SLR2
-slr=downcast_2_2:SLR2
-slr=upcast_2_0:SLR2
-slr=upcast_2_1:SLR2
-slr=upcast_2_2:SLR2
-slr=arith_hp_2:SLR2
-slr=arith_fp_2:SLR2
-slr=arith_dp_2:SLR2
-slr=arith_i32_2:SLR2
-slr=arith_i64_2:SLR2
+slr=compression_2_0:SLR2
+slr=compression_2_1:SLR2
+slr=compression_2_2:SLR2
+slr=arith_2:SLR2
 slr=lb_user_krnl_2:SLR2
 
 sp=ccl_offload_2.m_axi_0:HBM[12:17]
 sp=ccl_offload_2.m_axi_1:HBM[12:17]
 
 # Connect host controllers to CCL Offload
-sc=hostctrl_0.cmd:ccl_offload_0.s_axis_call_req
-sc=ccl_offload_0.m_axis_call_ack:hostctrl_0.sts
-sc=hostctrl_1.cmd:ccl_offload_1.s_axis_call_req
-sc=ccl_offload_1.m_axis_call_ack:hostctrl_1.sts
-sc=hostctrl_2.cmd:ccl_offload_2.s_axis_call_req
-sc=ccl_offload_2.m_axis_call_ack:hostctrl_2.sts
+stream_connect=hostctrl_0.cmd:ccl_offload_0.s_axis_call_req
+stream_connect=ccl_offload_0.m_axis_call_ack:hostctrl_0.sts
+stream_connect=hostctrl_1.cmd:ccl_offload_1.s_axis_call_req
+stream_connect=ccl_offload_1.m_axis_call_ack:hostctrl_1.sts
+stream_connect=hostctrl_2.cmd:ccl_offload_2.s_axis_call_req
+stream_connect=ccl_offload_2.m_axis_call_ack:hostctrl_2.sts
 
 # Connect CCL Offload kernel to TCP Network Kernel
-sc=network_krnl_0.m_axis_tcp_port_status:ccl_offload_0.s_axis_eth_port_status
-sc=network_krnl_0.m_axis_tcp_open_status:ccl_offload_0.s_axis_eth_open_status
-sc=network_krnl_0.m_axis_tcp_notification:ccl_offload_0.s_axis_eth_notification
-sc=network_krnl_0.m_axis_tcp_rx_meta:ccl_offload_0.s_axis_eth_rx_meta
-sc=network_krnl_0.m_axis_tcp_rx_data:ccl_offload_0.s_axis_eth_rx_data
-sc=network_krnl_0.m_axis_tcp_tx_status:ccl_offload_0.s_axis_eth_tx_status
-sc=ccl_offload_0.m_axis_eth_listen_port:network_krnl_0.s_axis_tcp_listen_port
-sc=ccl_offload_0.m_axis_eth_open_connection:network_krnl_0.s_axis_tcp_open_connection
-sc=ccl_offload_0.m_axis_eth_read_pkg:network_krnl_0.s_axis_tcp_read_pkg
-sc=ccl_offload_0.m_axis_eth_tx_meta:network_krnl_0.s_axis_tcp_tx_meta
-sc=ccl_offload_0.m_axis_eth_tx_data:network_krnl_0.s_axis_tcp_tx_data
+stream_connect=network_krnl_0.m_axis_tcp_port_status:ccl_offload_0.s_axis_eth_port_status
+stream_connect=network_krnl_0.m_axis_tcp_open_status:ccl_offload_0.s_axis_eth_open_status
+stream_connect=network_krnl_0.m_axis_tcp_notification:ccl_offload_0.s_axis_eth_notification
+stream_connect=network_krnl_0.m_axis_tcp_rx_meta:ccl_offload_0.s_axis_eth_rx_meta
+stream_connect=network_krnl_0.m_axis_tcp_rx_data:ccl_offload_0.s_axis_eth_rx_data
+stream_connect=network_krnl_0.m_axis_tcp_tx_status:ccl_offload_0.s_axis_eth_tx_status
+stream_connect=ccl_offload_0.m_axis_eth_listen_port:network_krnl_0.s_axis_tcp_listen_port
+stream_connect=ccl_offload_0.m_axis_eth_open_connection:network_krnl_0.s_axis_tcp_open_connection
+stream_connect=ccl_offload_0.m_axis_eth_read_pkg:network_krnl_0.s_axis_tcp_read_pkg
+stream_connect=ccl_offload_0.m_axis_eth_tx_meta:network_krnl_0.s_axis_tcp_tx_meta
+stream_connect=ccl_offload_0.m_axis_eth_tx_data:network_krnl_0.s_axis_tcp_tx_data
 
-sc=network_krnl_1.m_axis_tcp_port_status:ccl_offload_1.s_axis_eth_port_status
-sc=network_krnl_1.m_axis_tcp_open_status:ccl_offload_1.s_axis_eth_open_status
-sc=network_krnl_1.m_axis_tcp_notification:ccl_offload_1.s_axis_eth_notification
-sc=network_krnl_1.m_axis_tcp_rx_meta:ccl_offload_1.s_axis_eth_rx_meta
-sc=network_krnl_1.m_axis_tcp_rx_data:ccl_offload_1.s_axis_eth_rx_data
-sc=network_krnl_1.m_axis_tcp_tx_status:ccl_offload_1.s_axis_eth_tx_status
-sc=ccl_offload_1.m_axis_eth_listen_port:network_krnl_1.s_axis_tcp_listen_port
-sc=ccl_offload_1.m_axis_eth_open_connection:network_krnl_1.s_axis_tcp_open_connection
-sc=ccl_offload_1.m_axis_eth_read_pkg:network_krnl_1.s_axis_tcp_read_pkg
-sc=ccl_offload_1.m_axis_eth_tx_meta:network_krnl_1.s_axis_tcp_tx_meta
-sc=ccl_offload_1.m_axis_eth_tx_data:network_krnl_1.s_axis_tcp_tx_data
+stream_connect=network_krnl_1.m_axis_tcp_port_status:ccl_offload_1.s_axis_eth_port_status
+stream_connect=network_krnl_1.m_axis_tcp_open_status:ccl_offload_1.s_axis_eth_open_status
+stream_connect=network_krnl_1.m_axis_tcp_notification:ccl_offload_1.s_axis_eth_notification
+stream_connect=network_krnl_1.m_axis_tcp_rx_meta:ccl_offload_1.s_axis_eth_rx_meta
+stream_connect=network_krnl_1.m_axis_tcp_rx_data:ccl_offload_1.s_axis_eth_rx_data
+stream_connect=network_krnl_1.m_axis_tcp_tx_status:ccl_offload_1.s_axis_eth_tx_status
+stream_connect=ccl_offload_1.m_axis_eth_listen_port:network_krnl_1.s_axis_tcp_listen_port
+stream_connect=ccl_offload_1.m_axis_eth_open_connection:network_krnl_1.s_axis_tcp_open_connection
+stream_connect=ccl_offload_1.m_axis_eth_read_pkg:network_krnl_1.s_axis_tcp_read_pkg
+stream_connect=ccl_offload_1.m_axis_eth_tx_meta:network_krnl_1.s_axis_tcp_tx_meta
+stream_connect=ccl_offload_1.m_axis_eth_tx_data:network_krnl_1.s_axis_tcp_tx_data
 
-sc=network_krnl_2.m_axis_tcp_port_status:ccl_offload_2.s_axis_eth_port_status
-sc=network_krnl_2.m_axis_tcp_open_status:ccl_offload_2.s_axis_eth_open_status
-sc=network_krnl_2.m_axis_tcp_notification:ccl_offload_2.s_axis_eth_notification
-sc=network_krnl_2.m_axis_tcp_rx_meta:ccl_offload_2.s_axis_eth_rx_meta
-sc=network_krnl_2.m_axis_tcp_rx_data:ccl_offload_2.s_axis_eth_rx_data
-sc=network_krnl_2.m_axis_tcp_tx_status:ccl_offload_2.s_axis_eth_tx_status
-sc=ccl_offload_2.m_axis_eth_listen_port:network_krnl_2.s_axis_tcp_listen_port
-sc=ccl_offload_2.m_axis_eth_open_connection:network_krnl_2.s_axis_tcp_open_connection
-sc=ccl_offload_2.m_axis_eth_read_pkg:network_krnl_2.s_axis_tcp_read_pkg
-sc=ccl_offload_2.m_axis_eth_tx_meta:network_krnl_2.s_axis_tcp_tx_meta
-sc=ccl_offload_2.m_axis_eth_tx_data:network_krnl_2.s_axis_tcp_tx_data
+stream_connect=network_krnl_2.m_axis_tcp_port_status:ccl_offload_2.s_axis_eth_port_status
+stream_connect=network_krnl_2.m_axis_tcp_open_status:ccl_offload_2.s_axis_eth_open_status
+stream_connect=network_krnl_2.m_axis_tcp_notification:ccl_offload_2.s_axis_eth_notification
+stream_connect=network_krnl_2.m_axis_tcp_rx_meta:ccl_offload_2.s_axis_eth_rx_meta
+stream_connect=network_krnl_2.m_axis_tcp_rx_data:ccl_offload_2.s_axis_eth_rx_data
+stream_connect=network_krnl_2.m_axis_tcp_tx_status:ccl_offload_2.s_axis_eth_tx_status
+stream_connect=ccl_offload_2.m_axis_eth_listen_port:network_krnl_2.s_axis_tcp_listen_port
+stream_connect=ccl_offload_2.m_axis_eth_open_connection:network_krnl_2.s_axis_tcp_open_connection
+stream_connect=ccl_offload_2.m_axis_eth_read_pkg:network_krnl_2.s_axis_tcp_read_pkg
+stream_connect=ccl_offload_2.m_axis_eth_tx_meta:network_krnl_2.s_axis_tcp_tx_meta
+stream_connect=ccl_offload_2.m_axis_eth_tx_data:network_krnl_2.s_axis_tcp_tx_data
 
 # Connect tcp kernels in a loop
 # this is temporary, the connections will be broken and 
@@ -141,70 +119,40 @@ stream_connect=network_krnl_0.net_tx:network_krnl_1.net_rx
 stream_connect=network_krnl_1.net_tx:network_krnl_2.net_rx
 stream_connect=network_krnl_2.net_tx:network_krnl_0.net_rx
 
-# Some clarifications are necessary for the following:
-# Vitis doesnt let us leave streams dangling
-# or connected to other streams on the same kernel
-# so when we need multiple things attached to the same kernel ports via
-# a switch, we fist connect them in a daisy chain
-# to the external kernel port.
-#
-# After system assembly, we can run a script which disconnects
-# this arrangement, inserts a AXIS switch on the external 
-# kernel streams, and puts required kernels on that switch
+# arithmetic connections
+stream_connect=ccl_offload_0.m_axis_arith_op0:arith_0.in0
+stream_connect=ccl_offload_0.m_axis_arith_op1:arith_0.in1
+stream_connect=arith_0.out_r:ccl_offload_0.s_axis_arith_res
 
-# (Temporary) arithmetic connections
-stream_connect=ccl_offload_0.m_axis_arith_op:arith_hp_0.in_r
-stream_connect=arith_hp_0.out_r:arith_fp_0.in_r
-stream_connect=arith_fp_0.out_r:arith_dp_0.in_r
-stream_connect=arith_dp_0.out_r:arith_i32_0.in_r
-stream_connect=arith_i32_0.out_r:arith_i64_0.in_r
-stream_connect=arith_i64_0.out_r:ccl_offload_0.s_axis_arith_res
+stream_connect=ccl_offload_1.m_axis_arith_op0:arith_1.in0
+stream_connect=ccl_offload_1.m_axis_arith_op1:arith_1.in1
+stream_connect=arith_1.out_r:ccl_offload_1.s_axis_arith_res
 
-stream_connect=ccl_offload_1.m_axis_arith_op:arith_hp_1.in_r
-stream_connect=arith_hp_1.out_r:arith_fp_1.in_r
-stream_connect=arith_fp_1.out_r:arith_dp_1.in_r
-stream_connect=arith_dp_1.out_r:arith_i32_1.in_r
-stream_connect=arith_i32_1.out_r:arith_i64_1.in_r
-stream_connect=arith_i64_1.out_r:ccl_offload_1.s_axis_arith_res
+stream_connect=ccl_offload_2.m_axis_arith_op0:arith_2.in0
+stream_connect=ccl_offload_2.m_axis_arith_op1:arith_2.in1
+stream_connect=arith_2.out_r:ccl_offload_2.s_axis_arith_res
 
-stream_connect=ccl_offload_2.m_axis_arith_op:arith_hp_2.in_r
-stream_connect=arith_hp_2.out_r:arith_fp_2.in_r
-stream_connect=arith_fp_2.out_r:arith_dp_2.in_r
-stream_connect=arith_dp_2.out_r:arith_i32_2.in_r
-stream_connect=arith_i32_2.out_r:arith_i64_2.in_r
-stream_connect=arith_i64_2.out_r:ccl_offload_2.s_axis_arith_res
+# caster connections
+stream_connect=ccl_offload_0.m_axis_compression0:compression_0_0.in_r
+stream_connect=compression_0_0.out_r:ccl_offload_0.s_axis_compression0
+stream_connect=ccl_offload_0.m_axis_compression1:compression_0_1.in_r
+stream_connect=compression_0_1.out_r:ccl_offload_0.s_axis_compression1
+stream_connect=ccl_offload_0.m_axis_compression2:compression_0_2.in_r
+stream_connect=compression_0_2.out_r:ccl_offload_0.s_axis_compression2
 
-# (Temporary) caster connections
-# (Temporary) caster connections
-stream_connect=ccl_offload_0.m_axis_compression0:downcast_0_0.in_r
-stream_connect=downcast_0_0.out_r:upcast_0_0.in_r
-stream_connect=upcast_0_0.out_r:ccl_offload_0.s_axis_compression0
-stream_connect=ccl_offload_0.m_axis_compression1:downcast_0_1.in_r
-stream_connect=downcast_0_1.out_r:upcast_0_1.in_r
-stream_connect=upcast_0_1.out_r:ccl_offload_0.s_axis_compression1
-stream_connect=ccl_offload_0.m_axis_compression2:downcast_0_2.in_r
-stream_connect=downcast_0_2.out_r:upcast_0_2.in_r
-stream_connect=upcast_0_2.out_r:ccl_offload_0.s_axis_compression2
+stream_connect=ccl_offload_1.m_axis_compression0:compression_1_0.in_r
+stream_connect=compression_1_0.out_r:ccl_offload_1.s_axis_compression0
+stream_connect=ccl_offload_1.m_axis_compression1:compression_1_1.in_r
+stream_connect=compression_1_1.out_r:ccl_offload_1.s_axis_compression1
+stream_connect=ccl_offload_1.m_axis_compression2:compression_1_2.in_r
+stream_connect=compression_1_2.out_r:ccl_offload_1.s_axis_compression2
 
-stream_connect=ccl_offload_1.m_axis_compression0:downcast_1_0.in_r
-stream_connect=downcast_1_0.out_r:upcast_1_0.in_r
-stream_connect=upcast_1_0.out_r:ccl_offload_1.s_axis_compression0
-stream_connect=ccl_offload_1.m_axis_compression1:downcast_1_1.in_r
-stream_connect=downcast_1_1.out_r:upcast_1_1.in_r
-stream_connect=upcast_1_1.out_r:ccl_offload_1.s_axis_compression1
-stream_connect=ccl_offload_1.m_axis_compression2:downcast_1_2.in_r
-stream_connect=downcast_1_2.out_r:upcast_1_2.in_r
-stream_connect=upcast_1_2.out_r:ccl_offload_1.s_axis_compression2
-
-stream_connect=ccl_offload_2.m_axis_compression0:downcast_2_0.in_r
-stream_connect=downcast_2_0.out_r:upcast_2_0.in_r
-stream_connect=upcast_2_0.out_r:ccl_offload_2.s_axis_compression0
-stream_connect=ccl_offload_2.m_axis_compression1:downcast_2_1.in_r
-stream_connect=downcast_2_1.out_r:upcast_2_1.in_r
-stream_connect=upcast_2_1.out_r:ccl_offload_2.s_axis_compression1
-stream_connect=ccl_offload_2.m_axis_compression2:downcast_2_2.in_r
-stream_connect=downcast_2_2.out_r:upcast_2_2.in_r
-stream_connect=upcast_2_2.out_r:ccl_offload_2.s_axis_compression2
+stream_connect=ccl_offload_2.m_axis_compression0:compression_2_0.in_r
+stream_connect=compression_2_0.out_r:ccl_offload_2.s_axis_compression0
+stream_connect=ccl_offload_2.m_axis_compression1:compression_2_1.in_r
+stream_connect=compression_2_1.out_r:ccl_offload_2.s_axis_compression1
+stream_connect=ccl_offload_2.m_axis_compression2:compression_2_2.in_r
+stream_connect=compression_2_2.out_r:ccl_offload_2.s_axis_compression2
 
 # Tie off user kernel interface
 stream_connect=ccl_offload_0.m_axis_krnl:lb_user_krnl_0.in
