--- a/test/hardware/config/link_config_u250_tcp.ini
+++ b/test/hardware/config/link_config_u250_tcp.ini
@@ -20,28 +20,16 @@ nk=network_krnl:1:network_krnl_0
 nk=ccl_offload:1:ccl_offload_0
 nk=hostctrl:1:hostctrl_0
 nk=cmac_krnl:1:cmac_krnl_0
-nk=reduce_sum_half:1:arith_hp_0
-nk=reduce_sum_float:1:arith_fp_0
-nk=reduce_sum_double:1:arith_dp_0
-nk=reduce_sum_int32_t:1:arith_i32_0
-nk=reduce_sum_int64_t:1:arith_i64_0
-nk=fp_hp_stream_conv:3:downcast_0_0.downcast_0_1.downcast_0_2
-nk=hp_fp_stream_conv:3:upcast_0_0.upcast_0_1.upcast_0_2
+nk=reduce_sum:1:arith_0
+nk=hp_compression:3:compression_0_0.compression_0_1.compression_0_2
 nk=loopback:1:lb_user_krnl
 
 # Kernels Foorplaning
-slr=downcast_0_0:SLR1
-slr=downcast_0_1:SLR1
-slr=downcast_0_2:SLR1
-slr=upcast_0_0:SLR1
-slr=upcast_0_1:SLR1
-slr=upcast_0_2:SLR1
+slr=compression_0_0:SLR1
+slr=compression_0_1:SLR1
+slr=compression_0_2:SLR1
 slr=lb_user_krnl:SLR1
-slr=arith_hp_0:SLR1
-slr=arith_fp_0:SLR1
-slr=arith_dp_0:SLR1
-slr=arith_i32_0:SLR1
-slr=arith_i64_0:SLR1
+slr=arith_0:SLR1
 slr=ccl_offload_0:SLR1
 slr=hostctrl_0:SLR1
 slr=network_krnl_0:SLR3
@@ -53,57 +41,40 @@ sp=ccl_offload_0.m_axi_0:DDR[0:2]
 sp=ccl_offload_0.m_axi_1:DDR[0:2]
 
 # Connect host controllers to CCL Offload
-sc=hostctrl_0.cmd:ccl_offload_0.s_axis_call_req
-sc=ccl_offload_0.m_axis_call_ack:hostctrl_0.sts
+stream_connect=hostctrl_0.cmd:ccl_offload_0.s_axis_call_req
+stream_connect=ccl_offload_0.m_axis_call_ack:hostctrl_0.sts
 
 # Connect CCL Offload kernel to TCP Network Kernel
-sc=network_krnl_0.m_axis_tcp_port_status:ccl_offload_0.s_axis_eth_port_status:512
-sc=network_krnl_0.m_axis_tcp_open_status:ccl_offload_0.s_axis_eth_open_status:512
-sc=network_krnl_0.m_axis_tcp_notification:ccl_offload_0.s_axis_eth_notification:512
-sc=network_krnl_0.m_axis_tcp_rx_meta:ccl_offload_0.s_axis_eth_rx_meta:512
-sc=network_krnl_0.m_axis_tcp_rx_data:ccl_offload_0.s_axis_eth_rx_data:512
-sc=network_krnl_0.m_axis_tcp_tx_status:ccl_offload_0.s_axis_eth_tx_status:512
-sc=ccl_offload_0.m_axis_eth_listen_port:network_krnl_0.s_axis_tcp_listen_port:512
-sc=ccl_offload_0.m_axis_eth_open_connection:network_krnl_0.s_axis_tcp_open_connection:512
-sc=ccl_offload_0.m_axis_eth_read_pkg:network_krnl_0.s_axis_tcp_read_pkg:512
-sc=ccl_offload_0.m_axis_eth_tx_meta:network_krnl_0.s_axis_tcp_tx_meta:512
-sc=ccl_offload_0.m_axis_eth_tx_data:network_krnl_0.s_axis_tcp_tx_data:512
+stream_connect=network_krnl_0.m_axis_tcp_port_status:ccl_offload_0.s_axis_eth_port_status:512
+stream_connect=network_krnl_0.m_axis_tcp_open_status:ccl_offload_0.s_axis_eth_open_status:512
+stream_connect=network_krnl_0.m_axis_tcp_notification:ccl_offload_0.s_axis_eth_notification:512
+stream_connect=network_krnl_0.m_axis_tcp_rx_meta:ccl_offload_0.s_axis_eth_rx_meta:512
+stream_connect=network_krnl_0.m_axis_tcp_rx_data:ccl_offload_0.s_axis_eth_rx_data:512
+stream_connect=network_krnl_0.m_axis_tcp_tx_status:ccl_offload_0.s_axis_eth_tx_status:512
+stream_connect=ccl_offload_0.m_axis_eth_listen_port:network_krnl_0.s_axis_tcp_listen_port:512
+stream_connect=ccl_offload_0.m_axis_eth_open_connection:network_krnl_0.s_axis_tcp_open_connection:512
+stream_connect=ccl_offload_0.m_axis_eth_read_pkg:network_krnl_0.s_axis_tcp_read_pkg:512
+stream_connect=ccl_offload_0.m_axis_eth_tx_meta:network_krnl_0.s_axis_tcp_tx_meta:512
+stream_connect=ccl_offload_0.m_axis_eth_tx_data:network_krnl_0.s_axis_tcp_tx_data:512
 
 # Connect Network Kernel to CMAC Kernel
-sc=cmac_krnl_0.axis_net_rx:network_krnl_0.axis_net_rx
-sc=network_krnl_0.axis_net_tx:cmac_krnl_0.axis_net_tx
+stream_connect=cmac_krnl_0.axis_net_rx:network_krnl_0.axis_net_rx
+stream_connect=network_krnl_0.axis_net_tx:cmac_krnl_0.axis_net_tx
 
-# Some clarifications are necessary for the following:
-# Vitis doesnt let us leave streams dangling
-# or connected to other streams on the same kernel
-# so when we need multiple things attached to the same kernel ports via
-# a switch, we fist connect them in a daisy chain
-# to the external kernel port.
-#
-# After system assembly, we can run a script which disconnects
-# this arrangement, inserts a AXIS switch on the external 
-# kernel streams, and puts required kernels on that switch
+# arithmetic connections
+stream_connect=ccl_offload_0.m_axis_arith_op0:arith_0.in0
+stream_connect=ccl_offload_0.m_axis_arith_op1:arith_0.in1
+stream_connect=arith_0.out_r:ccl_offload_0.s_axis_arith_res
 
-# (Temporary) arithmetic connections
-stream_connect=ccl_offload_0.m_axis_arith_op:arith_hp_0.in_r
-stream_connect=arith_hp_0.out_r:arith_fp_0.in_r
-stream_connect=arith_fp_0.out_r:arith_dp_0.in_r
-stream_connect=arith_dp_0.out_r:arith_i32_0.in_r
-stream_connect=arith_i32_0.out_r:arith_i64_0.in_r
-stream_connect=arith_i64_0.out_r:ccl_offload_0.s_axis_arith_res
+# caster connections
+stream_connect=ccl_offload_0.m_axis_compression0:compression_0_0.in_r
+stream_connect=compression_0_0.out_r:ccl_offload_0.s_axis_compression0
 
-# (Temporary) caster connections
-stream_connect=ccl_offload_0.m_axis_compression0:downcast_0_0.in_r
-stream_connect=downcast_0_0.out_r:upcast_0_0.in_r
-stream_connect=upcast_0_0.out_r:ccl_offload_0.s_axis_compression0
+stream_connect=ccl_offload_0.m_axis_compression1:compression_0_1.in_r
+stream_connect=compression_0_1.out_r:ccl_offload_0.s_axis_compression1
 
-stream_connect=ccl_offload_0.m_axis_compression1:downcast_0_1.in_r
-stream_connect=downcast_0_1.out_r:upcast_0_1.in_r
-stream_connect=upcast_0_1.out_r:ccl_offload_0.s_axis_compression1
-
-stream_connect=ccl_offload_0.m_axis_compression2:downcast_0_2.in_r
-stream_connect=downcast_0_2.out_r:upcast_0_2.in_r
-stream_connect=upcast_0_2.out_r:ccl_offload_0.s_axis_compression2
+stream_connect=ccl_offload_0.m_axis_compression2:compression_0_2.in_r
+stream_connect=compression_0_2.out_r:ccl_offload_0.s_axis_compression2
 
 # Tie off user kernel interface
 stream_connect=ccl_offload_0.m_axis_krnl:lb_user_krnl.in
