--- a/test/hardware/config/link_config_u250_tri.ini
+++ b/test/hardware/config/link_config_u250_tri.ini
@@ -115,18 +115,7 @@ stream_connect=network_krnl_0.net_tx:network_krnl_1.net_rx
 stream_connect=network_krnl_1.net_tx:network_krnl_2.net_rx
 stream_connect=network_krnl_2.net_tx:network_krnl_0.net_rx
 
-# Some clarifications are necessary for the following:
-# Vitis doesnt let us leave streams dangling
-# or connected to other streams on the same kernel
-# so when we need multiple things attached to the same kernel ports via
-# a switch, we fist connect them in a daisy chain
-# to the external kernel port.
-#
-# After system assembly, we can run a script which disconnects
-# this arrangement, inserts a AXIS switch on the external 
-# kernel streams, and puts required kernels on that switch
-
-# (Temporary) arithmetic connections
+# arithmetic connections
 stream_connect=ccl_offload_0.m_axis_arith_op0:arith_0.in0
 stream_connect=ccl_offload_0.m_axis_arith_op1:arith_0.in1
 stream_connect=arith_0.out_r:ccl_offload_0.s_axis_arith_res
@@ -139,7 +128,7 @@ stream_connect=ccl_offload_2.m_axis_arith_op0:arith_2.in0
 stream_connect=ccl_offload_2.m_axis_arith_op1:arith_2.in1
 stream_connect=arith_2.out_r:ccl_offload_2.s_axis_arith_res
 
-# (Temporary) caster connections
+# caster connections
 stream_connect=ccl_offload_0.m_axis_compression0:compression_0_0.in_r
 stream_connect=compression_0_0.out_r:ccl_offload_0.s_axis_compression0
 stream_connect=ccl_offload_0.m_axis_compression1:compression_0_1.in_r
