--- a/.gitmodules
+++ b/.gitmodules
@@ -25,5 +25,5 @@
 	path = hlslib
 	url = https://github.com/quetric/hlslib.git
 [submodule "test/xrt/cxxopts"]
-	path = test/xrt/cxxopts
+	path = test/host/xrt/cxxopts
 	url = https://github.com/jarro2783/cxxopts.git
