--- a/test/model/emulator/CMakeLists.txt
+++ b/test/model/emulator/CMakeLists.txt
@@ -20,7 +20,7 @@ project(accl_emulation)
 
 set(CMAKE_CXX_STANDARD 17)
 
-set(ACCL_REPO_ROOT ${CMAKE_CURRENT_LIST_DIR}/../../)
+set(ACCL_REPO_ROOT ${CMAKE_CURRENT_LIST_DIR}/../../../)
 set(HLSLIB_INCLUDE ${ACCL_REPO_ROOT}/hlslib/include/hlslib/xilinx/)
 set(CCLO_HLS_ROOT ${ACCL_REPO_ROOT}/kernels/cclo/hls)
 set(REDUCTION_DIR ${ACCL_REPO_ROOT}/kernels/plugins/reduce_sum)
@@ -31,7 +31,7 @@ set(SEGMENTER_DIR ${CCLO_HLS_ROOT}/segmenter)
 set(RXBUF_OFFLOAD_DIR ${CCLO_HLS_ROOT}/rxbuf_offload)
 set(DMA_MOVER_DIR ${CCLO_HLS_ROOT}/dma_mover)
 set(MB_FW_DIR ${ACCL_REPO_ROOT}/kernels/cclo/fw/sw_apps/ccl_offload_control/src)
-set(ZMQ_INTF_DIR ${ACCL_REPO_ROOT}/test/zmq)
+set(ZMQ_INTF_DIR ${ACCL_REPO_ROOT}/test/model/zmq)
 set(LOG_DIR ${ACCL_REPO_ROOT}/test/log)
 
 find_package(MPI REQUIRED)
