--- a/test/hardware/Makefile
+++ b/test/hardware/Makefile
@@ -16,6 +16,11 @@
 # *******************************************************************************/
 
 PLATFORM ?= xilinx_u280_xdma_201920_3
+# Supported Alveo platforms are:
+# U55C: xilinx_u55c_gen3x16_xdma_202110_1
+# U280: xilinx_u280_xdma_201920_3
+# U250: xilinx_u250_gen3x16_xdma_3_1_202020_1
+
 XSA := $(strip $(patsubst %.xpfm, % , $(shell basename $(PLATFORM))))
 DEBUG ?= none
 PROFILE ?= none
@@ -66,6 +71,9 @@ ifeq (u250,$(findstring u250, $(PLATFORM)))
 else ifeq (u280,$(findstring u280, $(PLATFORM)))
 	FPGAPART=xcu280-fsvh2892-2L-e
 	BOARD=u280
+else ifeq (u55c,$(findstring u55c, $(PLATFORM)))
+	FPGAPART=xcu55c-fsvh2892-2L-e
+	BOARD=u55c
 else
 	$(error Unsupported PLATFORM)
 endif
