A bit more documentation, and fixed cfg for pypi upload

--- a/driver/pynq/setup.cfg
+++ b/driver/pynq/setup.cfg
@@ -17,7 +17,7 @@
 
 [metadata]
 name = pyaccl
-version = 0.0.1
+version = 0.1
 author = Lucian Petrica
 author_email = lucianp@amd.com
 license = Apache License 2.0
@@ -28,7 +28,7 @@ long_description_content_type = text/markdown
 url = https://github.com/Xilinx/ACCL
 classifiers =
     Programming Language :: Python :: 3
-    License :: OSI Approved :: Apache License 2.0
+    License :: OSI Approved :: Apache Software License
     Operating System :: OS Independent
 
 [options]
