Fix for hw builds after removal of Makefile in kernels/

--- a/test/hardware/Makefile
+++ b/test/hardware/Makefile
@@ -26,7 +26,8 @@ DEBUG ?= none
 PROFILE ?= none
 MODE ?= tcp
 FREQUENCY = 250
-CCL_XO=../../kernels/cclo/ccl_offload.xo
+CCLO_XO = ../../kernels/cclo/ccl_offload.xo
+CCLO_MB_DEBUG_LEVEL ?= 0
 
 VNX=xup_vitis_network_example
 NETLAYERDIR = $(VNX)/NetLayers
@@ -97,17 +98,24 @@ ifeq (udp,$(MODE))
 	NET_XO = $(CMAC_UDP_XO) $(UDP_XO)
 	OTHER_XO = $(LOOPBACK_XO)
 	CONFIG += --user_ip_repo_paths $(HLS_IP_FOLDER)
+	CCLO_STACK_TYPE = UDP
+	CCLO_EN_FANIN = 0
 else ifeq (tri,$(MODE))
 	ETH_IF := none
 	NET_XO = $(TCP_DUMMY_XO)
 	OTHER_XO = $(LOOPBACK_XO)
 	CONFIG += --advanced.param compiler.userPostSysLinkOverlayTcl=$(shell pwd)/tcl/post_sys_link_tri.tcl
+	CCLO_STACK_TYPE = TCP
+	CCLO_EN_FANIN = 1
+	CCLO_MB_DEBUG_LEVEL = 2
 else ifeq (tcp, $(MODE))
 	CMAC_TCP_XO=Vitis_with_100Gbps_TCP-IP/_x.hw.$(XSA)/cmac_krnl.xo
 	NET_XO = $(TCP_XO) $(CMAC_TCP_XO)
 	OTHER_XO = $(LOOPBACK_XO)
 	CONFIG += --advanced.param compiler.userPostSysLinkOverlayTcl=$(shell pwd)/Vitis_with_100Gbps_TCP-IP/scripts/post_sys_link.tcl
 	CONFIG += --user_ip_repo_paths Vitis_with_100Gbps_TCP-IP/build/fpga-network-stack/iprepo
+	CCLO_STACK_TYPE = TCP
+	CCLO_EN_FANIN = 1
 else
 	$(error Unsupported MODE)
 endif
@@ -149,8 +157,9 @@ tcp_stack_ips:
 	make -C Vitis_with_100Gbps_TCP-IP/build installip
 
 $(XCLBIN): $(NET_XO) $(CONFIGFILE)
-	$(MAKE) -C ../../kernels PLATFORM=$(PLATFORM) DEBUG=$(DEBUG)
-	v++ --link --platform $(PLATFORM) --kernel_frequency $(FREQUENCY) --save-temps --temp_dir $(BUILD_DIR) $(CONFIG) -o $@ $(CCL_XO) $(HOSTCTRL_XO) $(ARITHMETIC_XO) $(NET_XO) $(OTHER_XO)
+	$(MAKE) -C ../../kernels/cclo PLATFORM=$(PLATFORM) STACK_TYPE=$(CCLO_STACK_TYPE) CCLO_EN_FANIN=$(CCLO_EN_FANIN) MB_DEBUG_LEVEL=$(CCLO_MB_DEBUG_LEVEL)
+	$(MAKE) -C ../../kernels/plugins PLATFORM=$(PLATFORM) DEBUG=$(DEBUG)
+	v++ --link --platform $(PLATFORM) --kernel_frequency $(FREQUENCY) --save-temps --temp_dir $(BUILD_DIR) $(CONFIG) -o $@ $(CCLO_XO) $(HOSTCTRL_XO) $(ARITHMETIC_XO) $(NET_XO) $(OTHER_XO)
 
 distclean:
 	git clean -xfd
