--- a/test/host/xrt/CMakeLists.txt
+++ b/test/host/xrt/CMakeLists.txt
@@ -37,8 +37,9 @@ set(CMAKE_BUILD_TYPE Debug)
 set(ACCL_DEBUG 1)
 
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../../driver/xrt "CMakeFiles/accl")
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../hardware/xrt_network_util "CMakeFiles/xrt_network_util")
 
 find_package(MPI REQUIRED)
 add_executable(test test.cpp)
-target_include_directories(test PUBLIC ${MPI_CXX_INCLUDE_PATH} ${ACCL_INCLUDE_PATH})
+target_include_directories(test PUBLIC ${MPI_CXX_INCLUDE_PATH} ${ACCL_INCLUDE_PATH} ${ACCL_NETWORK_UTIL_INCLUDE_PATH})
 target_link_libraries(test PUBLIC MPI::MPI_CXX accl)
