--- a/test/hardware/config/link_config_u280_tcp.ini
+++ b/test/hardware/config/link_config_u280_tcp.ini
@@ -20,7 +20,7 @@ nk=network_krnl:1:network_krnl_0
 nk=ccl_offload:1:ccl_offload_0
 nk=hostctrl:1:hostctrl_0
 nk=cmac_krnl:1:cmac_krnl_0
-nk=reduce_sum:1:arith_0
+nk=reduce_ops:1:arith_0
 nk=hp_compression:3:compression_0_0.compression_0_1.compression_0_2
 nk=loopback:1:lb_user_krnl
 
