--- a/test/hardware/config/link_config_u280_tri.ini
+++ b/test/hardware/config/link_config_u280_tri.ini
@@ -20,7 +20,7 @@
 nk=ccl_offload:3:ccl_offload_0.ccl_offload_1.ccl_offload_2
 nk=hostctrl:3:hostctrl_0.hostctrl_1.hostctrl_2
 nk=network_krnl:3:network_krnl_0.network_krnl_1.network_krnl_2
-nk=reduce_sum:3:arith_0.arith_1.arith_2
+nk=reduce_ops:3:arith_0.arith_1.arith_2
 nk=hp_compression:9:compression_0_0.compression_0_1.compression_0_2.compression_1_0.compression_1_1.compression_1_2.compression_2_0.compression_2_1.compression_2_2
 nk=loopback:3:lb_user_krnl_0.lb_user_krnl_1.lb_user_krnl_2
 
