--- a/test/model/emulator/CMakeLists.txt
+++ b/test/model/emulator/CMakeLists.txt
@@ -25,7 +25,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(ACCL_REPO_ROOT ${CMAKE_CURRENT_LIST_DIR}/../../../)
 set(HLSLIB_INCLUDE ${ACCL_REPO_ROOT}/hlslib/include/hlslib/xilinx/)
 set(CCLO_HLS_ROOT ${ACCL_REPO_ROOT}/kernels/cclo/hls)
-set(REDUCTION_DIR ${ACCL_REPO_ROOT}/kernels/plugins/reduce_sum)
+set(REDUCTION_DIR ${ACCL_REPO_ROOT}/kernels/plugins/reduce_ops)
 set(COMPRESSOR_DIR ${ACCL_REPO_ROOT}/kernels/plugins/hp_compression)
 set(DUMMY_TCP_DIR ${ACCL_REPO_ROOT}/kernels/plugins/dummy_tcp_stack)
 set(CCLO_ETH_DIR ${CCLO_HLS_ROOT}/eth_intf)
@@ -50,7 +50,7 @@ endif (NOT EXISTS $ENV{XILINX_HLS})
 set_source_files_properties(${MB_FW_DIR}/ccl_offload_control.c PROPERTIES LANGUAGE CXX)
 
 set(EMU_INCLUDES ${HLSLIB_INCLUDE} $ENV{XILINX_HLS}/include/ ${REDUCTION_DIR} ${COMPRESSOR_DIR} ${CCLO_ETH_DIR} ${SEGMENTER_DIR} ${MB_FW_DIR} ${CCLO_HLS_ROOT} ${DMA_MOVER_DIR} ${RXBUF_OFFLOAD_DIR} ${DUMMY_TCP_DIR} ${ZMQ_INTF_DIR} ${LOG_DIR})
-set(EMU_SOURCES cclo_emu.cpp ${MB_FW_DIR}/ccl_offload_control.c ${REDUCTION_DIR}/reduce_sum.cpp ${COMPRESSOR_DIR}/hp_compression.cpp
+set(EMU_SOURCES cclo_emu.cpp ${MB_FW_DIR}/ccl_offload_control.c ${REDUCTION_DIR}/reduce_ops.cpp ${COMPRESSOR_DIR}/hp_compression.cpp
                 ${CCLO_ETH_DIR}/udp_depacketizer.cpp ${CCLO_ETH_DIR}/tcp_txHandler.cpp ${CCLO_ETH_DIR}/tcp_sessionHandler.cpp ${CCLO_ETH_DIR}/tcp_rxHandler.cpp ${CCLO_ETH_DIR}/udp_packetizer.cpp ${CCLO_ETH_DIR}/tcp_packetizer.cpp ${CCLO_ETH_DIR}/tcp_depacketizer.cpp
                 ${SEGMENTER_DIR}/stream_segmenter.cpp ${RXBUF_OFFLOAD_DIR}/rxbuf_dequeue.cpp ${RXBUF_OFFLOAD_DIR}/rxbuf_enqueue.cpp ${RXBUF_OFFLOAD_DIR}/rxbuf_seek.cpp ${RXBUF_OFFLOAD_DIR}/rxbuf_session.cpp
                 ${DMA_MOVER_DIR}/dma_mover.cpp ${DUMMY_TCP_DIR}/dummy_tcp_stack.cpp ${ZMQ_INTF_DIR}/zmq_server.cpp)
