Renamed tri FPGA design to axis3x to better reflect its contents, and updated docs

--- a/test/hardware/Makefile
+++ b/test/hardware/Makefile
@@ -105,7 +105,7 @@ ifeq (udp,$(MODE))
 	CONFIG += --user_ip_repo_paths $(HLS_IP_FOLDER)
 	CCLO_STACK_TYPE = UDP
 	CCLO_EN_FANIN = 0
-else ifeq (tri,$(MODE))
+else ifeq (axis3x,$(MODE))
 	ETH_IF := none
 	NET_XO = $(TCP_DUMMY_XO)
 	OTHER_XO = $(LOOPBACK_XO)
