--- a/test/hardware/config/link_config_u250_tcp.ini
+++ b/test/hardware/config/link_config_u250_tcp.ini
@@ -18,7 +18,8 @@
 # Define number of kernels and their name
 nk=network_krnl:1:network_krnl_0
 nk=ccl_offload:1:ccl_offload_0
-nk=hostctrl:1:hostctrl_0
+nk=client_arbiter:1:arb_0
+nk=hostctrl:2:hostctrl_0_0.hostctrl_0_1
 nk=cmac_krnl:1:cmac_krnl_0
 nk=reduce_ops:1:arith_0
 nk=hp_compression:3:compression_0_0.compression_0_1.compression_0_2
@@ -31,7 +32,9 @@ slr=compression_0_2:SLR1
 slr=lb_user_krnl:SLR1
 slr=arith_0:SLR1
 slr=ccl_offload_0:SLR1
-slr=hostctrl_0:SLR1
+slr=hostctrl_0_0:SLR1
+slr=hostctrl_0_1:SLR1
+slr=arb_0:SLR1
 slr=network_krnl_0:SLR3
 slr=cmac_krnl_0:SLR2
 
@@ -40,9 +43,13 @@ sp=network_krnl_0.m01_axi:DDR[3]
 sp=ccl_offload_0.m_axi_0:DDR[0:2]
 sp=ccl_offload_0.m_axi_1:DDR[0:2]
 
-# Connect host controllers to CCL Offload
-stream_connect=hostctrl_0.cmd:ccl_offload_0.s_axis_call_req
-stream_connect=ccl_offload_0.m_axis_call_ack:hostctrl_0.sts
+# Connect host controllers to arbiter to CCL Offload
+stream_connect=hostctrl_0_0.cmd:arb_0.cmd_clients_0
+stream_connect=hostctrl_0_1.cmd:arb_0.cmd_clients_1
+stream_connect=arb_0.cmd_cclo:ccl_offload_0.s_axis_call_req
+stream_connect=ccl_offload_0.m_axis_call_ack:arb_0.ack_cclo
+stream_connect=arb_0.ack_clients_0:hostctrl_0_0.sts
+stream_connect=arb_0.ack_clients_1:hostctrl_0_1.sts
 
 # Connect CCL Offload kernel to TCP Network Kernel
 stream_connect=network_krnl_0.m_axis_tcp_port_status:ccl_offload_0.s_axis_eth_port_status:512
