--- a/test/hardware/config/link_config_u55c_axis3x.ini
+++ b/test/hardware/config/link_config_u55c_axis3x.ini
@@ -18,7 +18,8 @@
 [connectivity]
 # Define number of kernels and their name
 nk=ccl_offload:3:ccl_offload_0.ccl_offload_1.ccl_offload_2
-nk=hostctrl:3:hostctrl_0.hostctrl_1.hostctrl_2
+nk=client_arbiter:3:arb_0.arb_1.arb_2
+nk=hostctrl:6:hostctrl_0_0.hostctrl_0_1.hostctrl_1_0.hostctrl_1_1.hostctrl_2_0.hostctrl_2_1
 nk=network_krnl:3:network_krnl_0.network_krnl_1.network_krnl_2
 nk=reduce_ops:3:arith_0.arith_1.arith_2
 nk=hp_compression:9:compression_0_0.compression_0_1.compression_0_2.compression_1_0.compression_1_1.compression_1_2.compression_2_0.compression_2_1.compression_2_2
@@ -26,7 +27,9 @@ nk=loopback:3:lb_user_krnl_0.lb_user_krnl_1.lb_user_krnl_2
 
 # Kernels Foorplaning
 slr=ccl_offload_0:SLR0
-slr=hostctrl_0:SLR0
+slr=hostctrl_0_0:SLR0
+slr=hostctrl_0_1:SLR0
+slr=arb_0:SLR0
 slr=network_krnl_0:SLR0
 slr=compression_0_0:SLR0
 slr=compression_0_1:SLR0
@@ -39,7 +42,9 @@ sp=ccl_offload_0.m_axi_1:HBM[0:5]
 
 # Kernels Foorplaning
 slr=ccl_offload_1:SLR1
-slr=hostctrl_1:SLR1
+slr=hostctrl_1_0:SLR1
+slr=hostctrl_1_1:SLR1
+slr=arb_1:SLR1
 slr=network_krnl_1:SLR1
 slr=compression_1_0:SLR1
 slr=compression_1_1:SLR1
@@ -52,7 +57,9 @@ sp=ccl_offload_1.m_axi_1:HBM[6:11]
 
 # Kernels Foorplaning
 slr=ccl_offload_2:SLR2
-slr=hostctrl_2:SLR2
+slr=hostctrl_2_0:SLR2
+slr=hostctrl_2_1:SLR2
+slr=arb_2:SLR2
 slr=network_krnl_2:SLR2
 slr=compression_2_0:SLR2
 slr=compression_2_1:SLR2
@@ -63,13 +70,28 @@ slr=lb_user_krnl_2:SLR2
 sp=ccl_offload_2.m_axi_0:HBM[12:17]
 sp=ccl_offload_2.m_axi_1:HBM[12:17]
 
-# Connect host controllers to CCL Offload
-stream_connect=hostctrl_0.cmd:ccl_offload_0.s_axis_call_req
-stream_connect=ccl_offload_0.m_axis_call_ack:hostctrl_0.sts
-stream_connect=hostctrl_1.cmd:ccl_offload_1.s_axis_call_req
-stream_connect=ccl_offload_1.m_axis_call_ack:hostctrl_1.sts
-stream_connect=hostctrl_2.cmd:ccl_offload_2.s_axis_call_req
-stream_connect=ccl_offload_2.m_axis_call_ack:hostctrl_2.sts
+# Connect host controllers to arbiter to CCL Offload
+stream_connect=hostctrl_0_0.cmd:arb_0.cmd_clients_0
+stream_connect=hostctrl_0_1.cmd:arb_0.cmd_clients_1
+stream_connect=arb_0.cmd_cclo:ccl_offload_0.s_axis_call_req
+stream_connect=ccl_offload_0.m_axis_call_ack:arb_0.ack_cclo
+stream_connect=arb_0.ack_clients_0:hostctrl_0_0.sts
+stream_connect=arb_0.ack_clients_1:hostctrl_0_1.sts
+
+stream_connect=hostctrl_1_0.cmd:arb_1.cmd_clients_0
+stream_connect=hostctrl_1_1.cmd:arb_1.cmd_clients_1
+stream_connect=arb_1.cmd_cclo:ccl_offload_0.s_axis_call_req
+stream_connect=ccl_offload_0.m_axis_call_ack:arb_1.ack_cclo
+stream_connect=arb_1.ack_clients_0:hostctrl_1_0.sts
+stream_connect=arb_1.ack_clients_1:hostctrl_1_1.sts
+
+stream_connect=hostctrl_2_0.cmd:arb_2.cmd_clients_0
+stream_connect=hostctrl_2_1.cmd:arb_2.cmd_clients_1
+stream_connect=arb_2.cmd_cclo:ccl_offload_0.s_axis_call_req
+stream_connect=ccl_offload_0.m_axis_call_ack:arb_2.ack_cclo
+stream_connect=arb_2.ack_clients_0:hostctrl_2_0.sts
+stream_connect=arb_2.ack_clients_1:hostctrl_2_1.sts
+
 
 # Connect CCL Offload kernel to TCP Network Kernel
 stream_connect=network_krnl_0.m_axis_tcp_port_status:ccl_offload_0.s_axis_eth_port_status
