Added close sesssion stream for compatibility with new easynet version

--- a/test/hardware/config/link_config_u250_tcp.ini
+++ b/test/hardware/config/link_config_u250_tcp.ini
@@ -60,6 +60,7 @@ stream_connect=network_krnl_0.m_axis_tcp_rx_data:ccl_offload_0.s_axis_eth_rx_dat
 stream_connect=network_krnl_0.m_axis_tcp_tx_status:ccl_offload_0.s_axis_eth_tx_status:512
 stream_connect=ccl_offload_0.m_axis_eth_listen_port:network_krnl_0.s_axis_tcp_listen_port:512
 stream_connect=ccl_offload_0.m_axis_eth_open_connection:network_krnl_0.s_axis_tcp_open_connection:512
+stream_connect=ccl_offload_0.m_axis_eth_close_connection:network_krnl_0.s_axis_tcp_close_connection:512
 stream_connect=ccl_offload_0.m_axis_eth_read_pkg:network_krnl_0.s_axis_tcp_read_pkg:512
 stream_connect=ccl_offload_0.m_axis_eth_tx_meta:network_krnl_0.s_axis_tcp_tx_meta:512
 stream_connect=ccl_offload_0.m_axis_eth_tx_data:network_krnl_0.s_axis_tcp_tx_data:512
