--- a/test/hardware/config/link_config_u280_axis3x.ini
+++ b/test/hardware/config/link_config_u280_axis3x.ini
@@ -101,6 +101,7 @@ stream_connect=network_krnl_0.m_axis_tcp_rx_data:ccl_offload_0.s_axis_eth_rx_dat
 stream_connect=network_krnl_0.m_axis_tcp_tx_status:ccl_offload_0.s_axis_eth_tx_status
 stream_connect=ccl_offload_0.m_axis_eth_listen_port:network_krnl_0.s_axis_tcp_listen_port
 stream_connect=ccl_offload_0.m_axis_eth_open_connection:network_krnl_0.s_axis_tcp_open_connection
+stream_connect=ccl_offload_0.m_axis_eth_close_connection:network_krnl_0.s_axis_tcp_close_connection
 stream_connect=ccl_offload_0.m_axis_eth_read_pkg:network_krnl_0.s_axis_tcp_read_pkg
 stream_connect=ccl_offload_0.m_axis_eth_tx_meta:network_krnl_0.s_axis_tcp_tx_meta
 stream_connect=ccl_offload_0.m_axis_eth_tx_data:network_krnl_0.s_axis_tcp_tx_data
@@ -113,6 +114,7 @@ stream_connect=network_krnl_1.m_axis_tcp_rx_data:ccl_offload_1.s_axis_eth_rx_dat
 stream_connect=network_krnl_1.m_axis_tcp_tx_status:ccl_offload_1.s_axis_eth_tx_status
 stream_connect=ccl_offload_1.m_axis_eth_listen_port:network_krnl_1.s_axis_tcp_listen_port
 stream_connect=ccl_offload_1.m_axis_eth_open_connection:network_krnl_1.s_axis_tcp_open_connection
+stream_connect=ccl_offload_1.m_axis_eth_close_connection:network_krnl_1.s_axis_tcp_close_connection
 stream_connect=ccl_offload_1.m_axis_eth_read_pkg:network_krnl_1.s_axis_tcp_read_pkg
 stream_connect=ccl_offload_1.m_axis_eth_tx_meta:network_krnl_1.s_axis_tcp_tx_meta
 stream_connect=ccl_offload_1.m_axis_eth_tx_data:network_krnl_1.s_axis_tcp_tx_data
@@ -125,6 +127,7 @@ stream_connect=network_krnl_2.m_axis_tcp_rx_data:ccl_offload_2.s_axis_eth_rx_dat
 stream_connect=network_krnl_2.m_axis_tcp_tx_status:ccl_offload_2.s_axis_eth_tx_status
 stream_connect=ccl_offload_2.m_axis_eth_listen_port:network_krnl_2.s_axis_tcp_listen_port
 stream_connect=ccl_offload_2.m_axis_eth_open_connection:network_krnl_2.s_axis_tcp_open_connection
+stream_connect=ccl_offload_2.m_axis_eth_close_connection:network_krnl_2.s_axis_tcp_close_connection
 stream_connect=ccl_offload_2.m_axis_eth_read_pkg:network_krnl_2.s_axis_tcp_read_pkg
 stream_connect=ccl_offload_2.m_axis_eth_tx_meta:network_krnl_2.s_axis_tcp_tx_meta
 stream_connect=ccl_offload_2.m_axis_eth_tx_data:network_krnl_2.s_axis_tcp_tx_data
